--- a/projetos/css/index.css
+++ b/projetos/css/index.css
@@ -132,7 +132,7 @@ li {
 
 /* Estilos de links */
 a {
-  color: #051ce6d5;
+  color: black;
   text-decoration: none;
   display: block;
 }
@@ -332,6 +332,24 @@ ul {
 }
 
 .button:hover {
+  background-color: #4b4b4b; /* Cor de fundo ao passar o mouse */
+  text-decoration: none; /* Remove o sublinhado ao passar o mouse */
+}
+
+.playsbutton {
+  display: inline-block; /* Permite que o link se comporte como um botão */
+  padding: 10px 20px; /* Espaçamento interno */
+  background-color: #555555; /* Cor de fundo */
+  color: white; /* Cor do texto */
+  text-align: center; /* Centraliza o texto */
+  border-radius: 5px; /* Bordas arredondadas */
+  text-decoration: none; /* Remove o sublinhado */
+  font-size: 16px; /* Tamanho da fonte */
+  cursor: pointer; /* Muda o cursor para indicar que é clicável */
+  transition: background-color 0.3s; /* Transição suave para a cor de fundo */
+}
+
+.playsbutton:hover {
   background-color: #4b4b4b; /* Cor de fundo ao passar o mouse */
   text-decoration: none; /* Remove o sublinhado ao passar o mouse */
 }
